# exogress-py

./: .gitignore  .gitmodules  Cargo.toml  Exofile  pyproject.toml
.github/: ci.yaml
.github/workflows/: check.yaml  ci.yaml
example-py/: main.py
src/: lib.rs
