[build-system]
requires = ["maturin"]
build-backend = "maturin"

[tool.poetry]
name = "exogress"
version = "0.0.1-alpha.1"
description = "Exogress Client for Python"
authors = ["Exogress Team <team@exogress.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/exogress/exogress-py"
keywords = ["load-balancer", "proxy", "http"]

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]
maturin = "0.8.3"
